# shellcraft

./: .gitignore  Cargo.toml  README.md  models.json
src/: agents.rs  capabilities.rs  diff.rs  editor.rs  fsutil.rs  llm.rs  main.rs  models.rs  planner.rs  pty.rs  runner.rs  task_ui.rs  ui.rs
