[package]
name = "shellcraft"
version = "0.1.0"
edition = "2021"

# ensure the binary has the same name (optional but nice)
[[bin]]
name = "shellcraft"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
pathdiff = "0.2"
regex = "1.11"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "rustls-tls"] }
once_cell = "1.19"
tempfile = "3.10"
which = "6.0"
similar = { version = "2.4", features = ["inline"] }
portable-pty = "0.8"
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "process", "io-util", "signal"] }

[profile.release]
lto = true
codegen-units = 1
