[package]
name = "shellcraft"
version = "0.1.0"
edition = "2021"

[package.metadata]
golden_prompts = { planner = "golden/prompts/planner.txt", reviewer = "golden/prompts/reviewer.txt" }

[[bin]]
name = "shellcraft"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
ctrlc = "3.4"
console = "0.15"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
pathdiff = "0.2"
regex = "1.11"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "rustls-tls"] }
once_cell = "1.19"
tempfile = "3.10"
which = "6.0"
similar = { version = "2.4", features = ["inline"] }
portable-pty = "0.8"
chrono = { version = "0.4", features = ["clock"] }
term_size = { version = "1.0.0-beta1" }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "process", "io-util", "signal", "fs"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3"
futures-core = "0.3"
self_update = "0.31"
git2 = "0.17"
log = "0.4"
walkdir = "2.5"
arboard = "3.6"
humantime = "2.1"
diff = "0.1.13"
libc = "0.2"
signal-hook = "0.3"

[dev-dependencies]
insta = { version = "1.38", features = ["json"] }
jsonschema = "0.16"

[profile.release]
lto = true
codegen-units = 1
